--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -2,9 +2,14 @@
 @media (max-width: 800px) {
   #header-home {
     height: 30rem;
+    border-bottom: 3px solid $main-color;
 
     .header-content {
       padding-top: 5rem;
+
+      h1 {
+        font-size: 3rem;
+      }
     }
   }
 }
