--- a/scss/_item_grid.scss
+++ b/scss/_item_grid.scss
@@ -72,6 +72,31 @@
     text-align: center;
     z-index: 1;
     color: #fff;
-    transition: opacity 500ms cubic-bezier(0.2, 1, 0.3, 1);
+    transform: translateY(-20%);
+    transition: opacity 500ms cubic-bezier(0.2, 1, 0.3, 1),
+      transform 500ms cubic-bezier(0.2, 1, 0.3, 1);
+    transition-delay: 400ms;
+  }
+
+  //   Text Wrap
+  &-text-wrap {
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
+  //   Text Title
+  &-text-title {
+    font-size: 2rem;
+    padding: 0 1 rem;
+    margin: 5px 0 0 0;
+  }
+
+  &-text-category {
+    text-transform: uppercase;
+    font-size: 1.2rem;
+    opacity: 0.7rem;
+    margin: 0;
   }
 }
