--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -44,8 +44,7 @@
   //   Stack Grid Columns
   #home-a .specials,
   #home-b .stats,
-  #home-c .process,
-  #about-d .testimonials,
+  #home-c .process #about-d .testimonials,
   .items {
     grid-template-columns: 1fr;
   }
